--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .DS_Store
 Fingers.xcodeproj/project.xcworkspace/xcuserdata/usabilitylab.xcuserdatad/UserInterfaceState.xcuserstate
+Fingers/Assets.xcassets/.DS_Store
