--- a/Fingers/Info.plist
+++ b/Fingers/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>BDSupperRegular.ttf</string>
 		<string>logo_font.ttf</string>
 	</array>
 </dict>
